# Dvora

./: LICENSE.md  README.md  demo.py  ghidra_export_functions.py  pyproject.toml
src/dvora/: commons.py  emulation.py  exceptions.py  heap.py  hooking.py  machine.py
src/dvora/abi/: __init__.py  aarch64.py  abi.py  arm.py  mips.py  x86.py
src/dvora/engine/: __init__.py  engine.py  unicorn.py
src/dvora/functions/: __init__.py  base.py  other.py  stdlib.py  string.py
src/dvora/loader/: base.py
src/dvora/loader/elf/: __init__.py  clustering.py  elf32loader.py  elf64loader.py  loader.py
testdata/strcat/: strcat  strcat.c  strcat1  strcat1.c
testdata/strcmp/: strcmp  strcmp.c  strcmp1  strcmp1.c
testdata/strcpy/: strcpy  strcpy.c  strcpy1  strcpy1.c
testdata/strncat/: strncat  strncat.c  strncat1  strncat1.c
testdata/strncmp/: strncmp  strncmp.c  strncmp1  strncmp1.c
testdata/strncpy/: strncpy  strncpy.c  strncpy1  strncpy1.c
